--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="./assets/images/book.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="./assets/book.css" />
+    <title>Awesome book</title>
+  </head>
+  <body>
+    <header class="main-section header-nav">
+      <h3>All Awesome books</h3>
+      <ul class="nav-order">
+        <li class="nav-list">
+          <a href="#" class="nav-link active" id="bookslist">List</a>
+        </li>
+        <li class="nav-list nav-list-add">
+          <a href="#" class="nav-link" id="booksadd">Add New</a>
+        </li>
+        <li class="nav-list">
+          <a href="#" class="nav-link" id="bookscontact">Contact</a>
+        </li>
+      </ul>
+    </header>
+  </body>
+</html>
