--- a/index.html
+++ b/index.html
@@ -5,76 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/index.css" />
-    <title>Awesome book</title>
+    <title>Awesome Books</title>
   </head>
   <body>
-    <header class="main-section header-nav">
-      <h3>All Awesome books</h3>
-      <ul class="nav-order">
-        <li class="nav-list">
-          <a href="#" class="nav-link active" id="bookslist">List</a>
-        </li>
-        <li class="nav-list nav-list-add">
-          <a href="#" class="nav-link" id="booksadd">Add New</a>
-        </li>
-        <li class="nav-list">
-          <a href="#" class="nav-link" id="bookscontact">Contact</a>
-        </li>
-      </ul>
+    <header>
+      <nav>
+        <span class="logo">awesome books</span>
+        <ul class="links">
+          <li><a class="active" id="list-btn" href="#list">list</a></li>
+          <li><a href="#addNew" id="add-btn">add new</a></li>
+          <li><a href="#contact" id="contact-btn">contact</a></li>
+        </ul>
+      </nav>
+      <p id="time"></p>
     </header>
-    <main class="main-section">
-      <section class="section-book-date" id="section-date-now">
-        March 30 ,2023 6:13 AM
+    <main>
+      <section id="list">
+        <h1>all awesome books</h1>
+        <div id="books"></div>
       </section>
-      <section class="section-book-list d-flex" id="awesomebookslist"></section>
-      <section class="section-books-add d-none" id="awesomebooksadd">
-        <h3 class="book-add-head">Add A New Book</h3>
-        <form
-          action=""
-          method="post"
-          id="form-asm-bookid"
-          class="form-book-add"
-        >
-          <input type="text" name="title" id="titleasb" required minlength="4"
-          maxlength="100"/ placeholder="Title" size="50" class="book-add-input">
-          <input
-            type="text"
-            name="author"
-            id="authorasb"
-            required
-            minlength="2"
-            maxlength="50"
-            placeholder="Author"
-            size="50"
-            class="book-add-input"
-          />
-          <input
-            type="submit"
-            name="add"
-            id="btnaddasb"
-            value="Add"
-            class="book-add-input btn-add"
-          />
-          <br />
+      <section id="addNew" class="hide">
+        <h1>Add a new book</h1>
+        <form action="#" method="post">
+          <input type="text" id="title" placeholder="Title" required />
+          <input type="text" id="author" placeholder="Author" required />
+          <span class="error"></span>
+          <button type="submit" class="add">Add</button>
         </form>
       </section>
-      <section class="section-book-contact d-none" id="awesomebookscontact">
-        <h3>Contact Information</h3>
-        <div>
-          <p class="p-contact">
-            Do you have any question or You just want to say <q>Hello</q>?<br />
-            You can reach out to us.
-          </p>
-        </div>
+      <section id="contact" class="hide">
+        <h1>contact information</h1>
+        Do you have any questions or you just want to say "Hello"?
+        <br />
+        You can reach out to us!
         <ul>
-          <li class="list-contact">E-mail Address:dagmawi.yoha03@gmail.com</li>
-          <li class="list-contact">Phone Number:+251910508504</li>
-          <li class="list-contact">Address:Addis Ababa, Ethiopia</li>
+          <li>Our e-mail dagmawi.yoha03@gmail.com</li>
+          <li>Our phone number (123) 456 7889</li>
+          <li>Our address Addis Ababa, Ethiopia</li>
         </ul>
       </section>
     </main>
-    <footer class="main-section">
-      <h5 class="copyright">Copyright ....</h5>
+    <footer>
+      <nav>
+        <h3>copyright -</h3>
+      </nav>
     </footer>
     <script type="module" src="index.js"></script>
   </body>
